Fix last group overflowing

--- a/packages/react/src/ActionBar/ActionBar.module.css
+++ b/packages/react/src/ActionBar/ActionBar.module.css
@@ -99,6 +99,7 @@
   flex-wrap: wrap;
   gap: inherit;
   justify-content: flex-end;
+  overflow: hidden;
 }
 
 .MoreButton {
